Fix CORS configuration for Vercel frontend